@@ -4,7 +4,9 @@
     * Add the set_env method to the Sys class.
   [Incompatible Changes]
     * Remove the Sys::FileTest class.
-    
+  [Changes]
+    * The z method in the Sys class returns 0 if the file do not exists.
+    * The s method in the Sys class returns 0 if the file do not exists.
 0.501 2023-11-23
   [Incompatible Changes]
      * The return type of the following methods in the Sys become void.
